# GPU_LIDAR_3DSensing

./: README.md
Data_Serial_Read/: ReadMe.txt  lib_ldr_data.c  lib_ldr_data.h  main.c
Docs/: 295A Final Report - 1st 2 Chapters-1.docx  Abstract_GPUEnhancedLIDARforRealTime3DSensing.docx  Chapter_1_RPLIDARInterfacewithNVIDIAJetsonTK1DevelopmentBoard.docx.docx  DevicesBringUpIssues.docx  GPU Enhanced LIDAR_Testing.xlsx  Project Task Assignment and Tracking.xlsx  Reference Workbook2_Rishis_Report.docx  TeamMembers.docx  Workbook 1.docx  Workbook 2.docx
Docs/Presentations/: Presentation_GPUEnhancedLIDARforRealTime3DSensing.ppt
Docs/Reports_Abstract/: 3D-LiDAR_Sensing.docx  Table of Contents - 1 page.docx  Workbook 1.docx
Integrated Code/: CMakeLists.txt  ReadMe.txt  Video_LIDAR_Projection_GPU.cpp  compile.py  lib_ldr_data.c  lib_ldr_data.h
LIDAR_LiteV3/: ReadMe
LIDAR_LiteV3/I2C_LIDAR_UNO/: I2C_LIDAR_UNO.ino  ReadMe.txt
LIDAR_LiteV3/lpc1758_LIDAR_litev3/: ReadMe.txt
OpenCV/: Cube_and_Decoration.cpp  Image_project.cpp  Image_project.txt.txt  Resize_and_extract_patch.cpp
OpenCV/Image Captur_Resize/: CMakeLists.txt  image_resize.cpp  resize.cpp  resize.cpp~
OpenCV/Image Projection on Screen/: CMakeLists.txt  Readme.txt  Source.cpp  image_projection.cpp
OpenCV/Image_Pyramid/: CMakeLists.txt  image_pyramid.cpp  my_video.avi  video pyramid.cpp  video_pyramid.cpp
OpenCV/LIADR_Projection-Mesh/: CMakeLists.txt  LIDAR_Projection.cpp
OpenCV/RPLIADR_Cube/: CMakeLists.txt  CMakeLists.txt~  screen_deco.cpp  screen_deco.cpp~
OpenCV/RPLIADR_Projection/: CMakeLists.txt  RPLIDAR_Projection.cpp
OpenCV/Screen_Decoration/: CMakeLists.txt  CMakeLists.txt~  Readme.txt  screen_deco.cpp  screen_deco.cpp~
OpenCV/Video_Projection/: CMakeLists.txt  COO~  Readme.txt  Video_Projection.cpp  Video_Projection.cpp~  my_video.avi  single coordinates.txt
OpenCV_CUDA/: Hello_World_Matrix Multiplication.cu  LIDCUD.cpp
OpenCV_CUDA/Video Projection/Video_Projection/: CMakeLists.txt  Video_Projection_GPU.cpp~  cudaImageTransform.hpp
OpenCV_CUDA/Video Projection/Video_Projection(CUDA Porting in Progress)/: CMakeLists.txt  Video_Projection.cpp  Video_Projection.cpp~  Video_Projection_GPU.cpp  compile.py  cudaImageTransform.cu
OpenCV_CUDA/Video Projection/Video_Projection(Multiple faces)/: Video_Projection_GPU.cpp
OpenCV_CUDA/Video Projection/Video_Projection_GPU v0_1(Doesn't Work)/: .project  Video_Projection_GPU.cpp  Video_Projection_GPU.cpp~  compile (copy).py  compile.py  cudaImageTransformation.cu  cudaImageTransformation.cu~  cudaImageTransformation.h
OpenCV_CUDA/Video Projection/Video_Projection_GPU_0_2(Doesn't Work)/: CMakeLists.txt  Video_Projection_GPU.cpp  Video_Projection_GPU.cpp~  cudaImageTransformation.cu  cudaImageTransformation.h
OpenCV_CUDA/Video_LIDAR_Projection/: CMakeLists.txt  Video_LIDAR_Projection_GPU.cpp
PWM_driver/: .cproject  .project
PWM_driver/Debug/: PWM_driver.axf  PWM_driver.map  PWM_driver_Debug.ld  PWM_driver_Debug_library.ld  PWM_driver_Debug_memory.ld  makefile  objects.mk
PWM_driver/Debug/src/: pwm.d  subdir.mk
PWM_driver/src/: pwm.c
PhotoMicroSensor/: main.cpp  myeint.hpp
RPLIDAR/: CMakeLists.txt  simple_grabber  simple_grabber.cpp
rplidar_sdk.1.5.6/sdk/app/frame_grabber/: FreqSetDlg.cpp  MainFrm.cpp  MainFrm.h  SerialSelDlg.cpp  SerialSelDlg.h  framegrabber.cpp  framegrabber.rc  resource.h  scanView.cpp  scanView.h  stdafx.h
rplidar_sdk.1.5.6/sdk/app/frame_grabber/drvlogic/: lidarmgr.cpp  lidarmgr.h
rplidar_sdk.1.5.6/sdk/app/simple_grabber/: main.cpp
rplidar_sdk.1.5.6/sdk/app/ultra_simple/: main.cpp
rplidar_sdk.1.5.6/tools/win32/: rplidar_driver.lib
(+6 files in other folders)
