cmake_minimum_required(VERSION 2.8)
project(Screen_decoration)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories("/home/ubuntu/rplidar/sdk/sdk/include")
add_executable(cv_RPLIDAR_Projection LIDAR_Projection.cpp)
find_library(RPLIDAR_LIBRARY rplidar_sdk HINTS /home/ubuntu/rplidar/sdk/output/Linux/Release)
target_link_libraries(cv_LIDAR_Projection ${OpenCV_LIBS})
target_link_libraries(cv_LIDAR_Projection m)
target_link_libraries(cv_LIDAR_Projection PUBLIC ${RPLIDAR_LIBRARY} -lpthread)
