cmake_minimum_required(VERSION 2.8)
project(Video_Projection_GPU)
find_package(OpenCV REQUIRED)
find_package(CUDA REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
find_library(GPUFunctions_LIBRARY cudaImageTransformation HINTS .)
add_executable(cv_Video_Projection_GPU Video_Projection_GPU.cpp)
target_link_libraries(cv_Video_Projection_GPU ${OpenCV_LIBS} m)
#target_link_libraries(cv_Video_Projection m)
target_link_libraries(cv_Video_Projection_GPU PUBLIC ${GPUFunctions_LIBRARY} -lcuda -lcudart)
